ocfl-java-itest/src/test/resources/invalid-repos/bad-logical-paths/925/0b9/912/9250b9912ee91d6b46e23299459ecd6eb8154451d62558a3a0a708a77926ad04/v5/inventory.json.sha512
4d60cc447703695eae254613b0850be8f635e5ce742a1d832679507dd7c2caf0fdc986eca6c16309ea98ff48efb78a397eb05d0d9c19b7e4c845525f3a87afe3	inventory.json